EXTRA_DIST = bitmap1.bmp bitmap2.bmp calc.bmp \
	author.xpm floppy0.xpm floppy1.xpm floppy2.xpm \
	irq0.xpm irq1.xpm irq2.xpm irq3.xpm irq4.xpm \
	flexcpu.xbm  flexmain.xbm  ok.xbm \
	chart.ico contain.ico mondrian.ico \
	flexmain.ico flexdisk.ico fsetup.ico \
	flexcpu.ico flexemu.ico flexemu1.ico flexemu2.ico flexemu3.ico \
	floppy0.ico floppy1.ico floppy2.ico resize.ico \
	irq0.ico irq1.ico irq2.ico irq3.ico irq4.ico \
	copy.bmp help.bmp helpcs.bmp cut.bmp new.bmp new_con.bmp preview.bmp \
	print.bmp save.bmp tick.bmp \
	container.xpm contain.xpm copy.xpm cut.xpm flexdisk.xpm help.xpm \
	new_con.xpm new.xpm open_dir.xpm open_con.xpm open.xpm paste.xpm \
	preview.xpm print.xpm save.xpm write.xbm \
	dirplain.xbm draft.xbm drawing.xbm flowchar.xbm open.bmp open_con.bmp \
	open_dir.bmp paste.bmp dnd_copy.xpm dnd_move.xpm dnd_none.xpm
all:

