EXTRA_DIST = \
	author.xpm floppy0.xpm floppy1.xpm floppy2.xpm \
	irq0.xpm irq1.xpm irq2.xpm irq3.xpm irq4.xpm \
	flexcpu.xbm  flexmain.xbm ok.xbm \
	contain.ico \
	flexdisk.ico fsetup.ico \
	flexcpu.ico flexemu.ico  \
	floppy0.ico floppy1.ico floppy2.ico \
	irq0.ico irq1.ico irq2.ico irq3.ico irq4.ico \
	copy.bmp new_con.bmp \
	contain.xpm copy.xpm flexdisk.xpm \
	new_con.xpm open_dir.xpm open_con.xpm paste.xpm \
	open_con.bmp \
	open_dir.bmp paste.bmp dnd_copy.xpm dnd_move.xpm dnd_none.xpm

SUBDIRS = 16x16 32x32 48x48 64x64 128x128 256x256 scalable

