EXTRA_DIST=$(app_icons) $(dist_icons)

app_icons = flexemu.png flexemu-fsetup.png flexemu-flexplorer.png

appicondir = $(datadir)/icons/hicolor/32x32/apps
appicon_DATA = $(app_icons)

dist_icons = flexemu-flexplorer-about.png \
             flexemu-flexplorer-attributes.png \
             flexemu-flexplorer-copy.png \
             flexemu-flexplorer-delete.png \
             flexemu-flexplorer-deselectall.png \
             flexemu-flexplorer-dir.png \
             flexemu-flexplorer-exit.png \
             flexemu-flexplorer-find.png \
             flexemu-flexplorer-info.png \
             flexemu-flexplorer-new.png \
             flexemu-flexplorer-open.png \
             flexemu-flexplorer-opendir.png \
             flexemu-flexplorer-options.png \
             flexemu-flexplorer-paste.png \
             flexemu-flexplorer-selectall.png \
             flexemu-flexplorer-view.png \
             flexemu-flexplorer-window-close.png \
	     qt_extended_32x32.png
