EXTRA_DIST=$(app_icons) $(dist_icons)

app_icons = \
	flexemu.png \
	flexemu-flexplorer.png \
	flexemu-fsetup.png

appicondir = $(datadir)/icons/hicolor/32x32/apps
appicon_DATA = $(app_icons)

dist_icons = \
	flexemu-breakpoints.png \
	flexemu-cpu-undocumented.png \
	flexemu-cpu.png \
	flexemu-flexplorer-about.png \
	flexemu-flexplorer-attributes.png \
	flexemu-flexplorer-copy.png \
	flexemu-flexplorer-delete.png \
	flexemu-flexplorer-deselectall.png \
	flexemu-flexplorer-dir.png \
	flexemu-flexplorer-exit.png \
	flexemu-flexplorer-extract.png \
	flexemu-flexplorer-find.png \
	flexemu-flexplorer-info.png \
	flexemu-flexplorer-new.png \
	flexemu-flexplorer-open.png \
	flexemu-flexplorer-opendir.png \
	flexemu-flexplorer-options.png \
	flexemu-flexplorer-options-needs-restart.png \
	flexemu-flexplorer-paste.png \
	flexemu-flexplorer-selectall.png \
	flexemu-flexplorer-view.png \
	flexemu-flexplorer-window-close.png \
	flexemu-flexplorer.png \
	flexemu-floppy.png \
	flexemu-fsetup.png \
	flexemu-irq-gray.png \
	flexemu-irq-lightblue.png \
	flexemu-irq-magenta.png \
	flexemu-irq-red.png \
	flexemu-irq-yellow.png \
	flexemu-logging.png \
	flexemu-original-frequency.png \
	flexemu-reset.png \
	flexemu-run.png \
	flexemu-screen-full.png \
	flexemu-screen1.png \
	flexemu-screen2.png \
	flexemu-screen3.png \
	flexemu-screen4.png \
	flexemu-screen5.png \
	flexemu-stop.png \
	flexemu.png \
	qt_extended_32x32.png
