EXTRA_DIST=$(app_icons) $(dist_icons)

app_icons = \
	flexemu.png \
	flexemu-flexplorer.png \
	flexemu-fsetup.png

appicondir = $(datadir)/icons/hicolor/32x32/apps
appicon_DATA = $(app_icons)

dist_icons = \
	flexemu-address.png \
	flexemu-ascii.png \
	flexemu-autoupdate-winsize.png \
	flexemu-breakpoints.png \
	flexemu-cpu-undocumented.png \
	flexemu-cpu.png \
	flexemu-detect-page-break.png \
	flexemu-flexplorer-about.png \
	flexemu-flexplorer-attributes.png \
	flexemu-flexplorer-copy.png \
	flexemu-flexplorer-delete.png \
	flexemu-flexplorer-deselectall.png \
	flexemu-flexplorer-dir.png \
	flexemu-flexplorer-exit.png \
	flexemu-flexplorer-extract.png \
	flexemu-flexplorer-find.png \
	flexemu-flexplorer-info.png \
	flexemu-flexplorer-inject.png \
	flexemu-flexplorer-new.png \
	flexemu-flexplorer-open.png \
	flexemu-flexplorer-opendir.png \
	flexemu-flexplorer-options.png \
	flexemu-flexplorer-options-needs-restart.png \
	flexemu-flexplorer-paste.png \
	flexemu-flexplorer-selectall.png \
	flexemu-flexplorer-view.png \
	flexemu-flexplorer-window-close.png \
	flexemu-flexplorer.png \
	flexemu-floppy.png \
	flexemu-fsetup.png \
	flexemu-irq-gray.png \
	flexemu-irq-lightblue.png \
	flexemu-irq-magenta.png \
	flexemu-irq-red.png \
	flexemu-irq-yellow.png \
	flexemu-logging.png \
	flexemu-memory.png \
	flexemu-original-frequency.png \
	flexemu-print-clear.png \
	flexemu-print-output.png \
	flexemu-print.png \
	flexemu-print-preview.png \
	flexemu-reset.png \
	flexemu-run.png \
	flexemu-screen-full.png \
	flexemu-screen1.png \
	flexemu-screen2.png \
	flexemu-screen3.png \
	flexemu-screen4.png \
	flexemu-screen5.png \
	flexemu-space.png \
	flexemu-stop.png \
	flexemu-toggle.png \
	flexemu-update-winsize.png \
	flexemu-window-close.png \
	flexemu.png \
	qt_extended_32x32.png
