EXTRA_DIST=$(app_icons) $(mimetype_icons)

app_icons = \
	flexemu.png \
	flexemu-flexplorer.png \
	flexemu-fsetup.png \
	application-x-flex-diskimage.png

appicondir = $(datadir)/icons/hicolor/48x48/apps
appicon_DATA = $(app_icons)

mimetype_icons = \
	application-x-flex-diskimage.png

mimetypeicondir = $(datadir)/icons/hicolor/48x48/mimetypes
mimetypeicon_DATA = $(mimetype_icons)
