EXTRA_DIST=$(app_icons) $(dist_icons)

app_icons = flexemu.svg flexemu-fsetup.svg flexemu-flexplorer.svg

appicondir = $(datadir)/icons/hicolor/scalable/apps
appicon_DATA = $(app_icons)

dist_icons = flexemu-flexplorer-about.svg \
             flexemu-flexplorer-attributes.svg \
             flexemu-flexplorer-copy.svg \
             flexemu-flexplorer-delete.svg \
             flexemu-flexplorer-deselectall.svg \
             flexemu-flexplorer-exit.svg \
             flexemu-flexplorer-find.svg \
             flexemu-flexplorer-info.svg \
             flexemu-flexplorer-new.svg \
             flexemu-flexplorer-open.svg \
             flexemu-flexplorer-opendir.svg \
             flexemu-flexplorer-options.svg \
             flexemu-flexplorer-paste.svg \
             flexemu-flexplorer-view.svg \
             flexemu-flexplorer-window-close.svg

